# jee-neet-ai-chatbot

./: .editorconfig  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  neetaichatbot.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
adapters/db_fake/: pyproject.toml
adapters/db_fake/src/neetai_db_fake/: __init__.py  repositories.py
adapters/db_fake/tests/: test_repositories.py
adapters/db_postgres/: pyproject.toml
adapters/db_postgres/src/neetai_db_postgres/: __init__.py  mappers.py  models.py  repositories.py  session.py
adapters/llm_anthropic/: pyproject.toml
adapters/llm_anthropic/src/neetai_llm_anthropic/: __init__.py  client.py
adapters/llm_anthropic/tests/: test_stub.py
adapters/llm_fake/: pyproject.toml
adapters/llm_fake/src/neetai_llm_fake/: __init__.py  client.py
adapters/llm_fake/tests/: test_fake_client.py
adapters/llm_openrouter/: pyproject.toml
adapters/llm_openrouter/src/neetai_llm_openrouter/: __init__.py  client.py
adapters/llm_openrouter/tests/: test_client.py
apps/api/: Dockerfile  docker-entrypoint.sh  pyproject.toml
apps/api/src/neetai_api/: __init__.py  container.py  deps.py  errors.py  logging.py  main.py  middleware.py  settings.py
apps/api/src/neetai_api/cli/: __init__.py  ingest_questions.py
apps/api/src/neetai_api/integrations/: google_sheets.py
apps/api/src/neetai_api/routers/: chat.py  health.py  onboarding.py  profile.py  webhooks.py
apps/api/tests/: conftest.py  test_health.py  test_ingest_cli.py  test_onboarding_routes.py  test_webhooks.py
apps/web/: .gitignore  README.md  middleware.ts  next.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  query-provider.tsx
apps/web/app/chat/: page.tsx
apps/web/app/onboarding/: page.tsx
apps/web/app/profile/: page.tsx
apps/web/app/sign-in/[[...sign-in]]/: page.tsx
apps/web/app/sign-up/[[...sign-up]]/: page.tsx
apps/web/components/chat/: structured-answer.tsx
apps/web/components/ui/: button.tsx  card.tsx  progress.tsx  radio-group.tsx  text-input.tsx
apps/web/lib/: cn.ts  onboarding-questions.ts  student.ts
apps/web/lib/api/: chat.ts  client.ts  types.ts
docs/adr/: 0001-modular-monolith.md  0002-postgres-pgvector.md  0003-ports-and-adapters.md  0004-no-langchain-scoped-langgraph.md  0005-openrouter-mvp.md  0006-clerk-for-auth-mvp.md  0007-uv-monorepo.md  0008-persistence-sqlalchemy-alembic-repositories.md  README.md
infra/data/: onboarding_questions.csv
infra/docker/: postgres-init.sql
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_add_question_exam_targets.py
scripts/: ingest_questions.py  smoke_llm.py
