[project]
name = "neetai-db-fake"
version = "0.1.0"
description = "In-memory implementations of repository ports. Tests + local dev."
requires-python = ">=3.12,<3.13"
dependencies = ["neetai-core", "neetai-ports"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neetai_db_fake"]
