[project]
name = "neetai-db-postgres"
version = "0.1.0"
description = "Postgres (psycopg async) implementations of repository ports + Alembic migrations."
requires-python = ">=3.12,<3.13"
dependencies = [
    "neetai-core",
    "neetai-ports",
    "sqlalchemy>=2.0.36",
    "psycopg[binary,pool]>=3.2",
    "alembic>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neetai_db_postgres"]
