[project]
name = "neetai-llm-anthropic"
version = "0.1.0"
description = "Direct-Anthropic implementation of LLMClient. Fallback / cost-optimization path."
requires-python = ">=3.12,<3.13"
dependencies = [
    "neetai-core",
    "neetai-ports",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neetai_llm_anthropic"]
