[project]
name = "neetai-llm-fake"
version = "0.1.0"
description = "Deterministic in-memory LLM client for unit tests."
requires-python = ">=3.12,<3.13"
dependencies = ["neetai-core", "neetai-ports"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neetai_llm_fake"]
