[project]
name = "neetai-llm-openrouter"
version = "0.1.0"
description = "OpenRouter implementation of LLMClient. Default LLM provider for MVP."
requires-python = ">=3.12,<3.13"
dependencies = [
    "neetai-core",
    "neetai-ports",
    "httpx>=0.28",
    "tenacity>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neetai_llm_openrouter"]
